syntax = "proto3";

package user;

option go_package = "./pkg/grpc/protoc/user";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    optional string company_id = 5;
    optional string store_id = 6;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message RegisterStaffRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string store_id = 5;
    string actor_company_id = 6; // ID Perusahaan dari user yang membuat (misal: COMPANY_REP)
}

message RegisterStaffResponse {
    User user = 1;
}

// --- PESAN BARU ---

message UpdateUserRequest {
    string id = 1; // ID user yang akan diupdate
    optional string name = 2;
    optional string email = 3;
    // Password tidak diupdate di sini, biasanya melalui endpoint terpisah
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}

message CreateCompanyWithRepRequest {
    string company_name = 1;
    string company_address = 2;
    string user_name = 3;
    string user_email = 4;
    string user_password = 5;
}

message CreateCompanyWithRepResponse {
    string company_id = 1;
    string company_name = 2;
    User user = 3;
}

// --- SERVICE YANG DIPERBARUI ---

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc RegisterStaff(RegisterStaffRequest) returns (RegisterStaffResponse);

    // RPC Baru
    rpc UpdateUser(UpdateUserRequest) returns (GetUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc CreateCompanyWithRep(CreateCompanyWithRepRequest) returns (CreateCompanyWithRepResponse);
}